Buisness Landing Page , z-index fix

--- a/css/global.css
+++ b/css/global.css
@@ -36,6 +36,7 @@ figcaption {
   top: 300px;
   left: 200px;
   transform: translateY(-50%);
+  z-index: 7;
 }
 
 .header {
